# ProjectMonitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: email.rs  error.rs  github.graphql  github.rs  main.rs  query.graphql
